--- a/my-app/src/Components/DashBoard/DashBoard.module.css
+++ b/my-app/src/Components/DashBoard/DashBoard.module.css
@@ -5,13 +5,15 @@
 	align-items: center;
 	margin: 0.5rem;
 }
+
 .searchDiv {
 	display: flex;
 	flex-direction: column;
 }
+
 .searchInput {
 	display: block;
-	width: 100%;
+	width: 12rem;
 	padding: 0.375rem 2.25rem 0.375rem 0.75rem;
 	-moz-padding-start: calc(0.75rem - 3px);
 	font-size: 1rem;
@@ -27,11 +29,27 @@
 	-webkit-appearance: none;
 	appearance: none;
 }
+
 .searchInput:focus {
 	border-color: #86b7fe;
 	outline: 0;
 	box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 25%);
 }
+
 .table {
 	padding: 0.5rem;
+}
+
+input[type="text"]:disabled {
+	background: #dddddd;
+}
+
+.dashBoard {
+	padding: 1rem 2rem;
+	background-color: #f8f8f8;
+	min-height: 100vh;
+}
+
+.width {
+	width: 12rem;
 }
